# MIRS

./: .gitignore  README.md  activate.bat  build.bat  reference.md  requirement.bat  requirements.txt  run.bat  setup.py
MIRS2/MIRS/: ai.py  console.py  controller.py  history.txt  kinematics.py  mirs.py  program.txt  robot.py  robot_model.py  simulation.py  start_sim.py  text.py  trajectory_generator.py  transform.py  utils.py
extras/MIRS/: history.txt  program2.txt  tests  v.py
hardware/: Trajectory_Planning.ipynb  Trapezoidalnew.m  code.ino  hardware.ino  robo.ino  robot.ino  stepper.ino
hardware/I2C_slave2_controller/: I2C_slave2_controller.ino
mirs/: build.bash  build.bat  script_cv.py
mirs/src/install/mirs_robot_description/share/mirs_robot_description/: local_setup.dsv  package.dsv  package.sh  package.xml  package.zsh
mirs/src/install/mirs_robot_description/share/mirs_robot_description/launch/: controller.yaml  robot.launch.py  robot_sim.launch.py
mirs/src/install/mirs_robot_description/share/mirs_robot_description/urdf/: robot.xacro
mirs/src/mirs_controller/: package.xml  robot.txt  setup.cfg  setup.py
mirs/src/mirs_controller/launch/: mirs_controller.launch.py
mirs/src/mirs_controller/mirs_controller/: Untitled.ipynb  check.ipynb  config.py  devices.py  joint_state_publisher.py  joint_state_publisher_.py  nodes.py  robot.py  src.py  test.py  test.urdf  topics.py  trajectory_follower.py  trajectory_follower_.py  universal_robots_ros.py
mirs/src/mirs_controller/mirs_controller/.ipynb_checkpoints/: check-checkpoint.ipynb
mirs/src/mirs_controller/mirs_controller/actions/: find_object.py  vision_assisted_pick_and_place.py
mirs/src/mirs_controller/mirs_controller/common/: config.py  msg.py  topics.py
mirs/src/mirs_controller/mirs_controller/devices/: camera.py  motor.py  sensors.py
mirs/src/mirs_controller/mirs_controller/dynamics/: Untitled.ipynb  computed_torque_model.py  dynamics.py  robot.urdf  t.py  test.py
mirs/src/mirs_controller/mirs_controller/dynamics/.ipynb_checkpoints/: Dynamics-checkpoint.ipynb
mirs/src/mirs_controller/mirs_controller/hardware/: hardware.py
mirs/src/mirs_controller/mirs_controller/kinematics/: DH.py  kinematics.py
mirs/src/mirs_controller/mirs_controller/robot/: camera.py  dynamics.py  kinematics.py  motion_planning.py  motor.py  robot.py  sensors.py
mirs/src/mirs_controller/mirs_controller/trajectory/control/: controllers.py  joint_state_publisher.py  robot_state_publisher.py  trajectory_follower.py
mirs/src/mirs_controller/mirs_controller/trajectory/planning/: trajectory_planner.py
mirs/src/mirs_controller/mirs_controller/transformations/: matrices.py
mirs/src/mirs_controller/resource/urdf/: mirs_description.trans
mirs/src/mirs_controller/robot_description/launch/: controller.launch
mirs/src/mirs_controller/robot_description/urdf/: robot.gazebo  robot.xacro
mirs/src/mirs_controller/urdf/: robot.urdf.xacro  robot_include.xacro
mirs/src/mirs_interfaces/: CMakeLists.txt
mirs/src/mirs_interfaces/devices/: camera.py  camera_client.py  hardware_interface.py  sensors.py
mirs/src/mirs_interfaces/mirs_interfaces/: CMakeLists.txt  package.xml
mirs/src/mirs_interfaces/mirs_interfaces/devices/: camera_client.py  camera_server.py  server.py
mirs/src/mirs_interfaces/mirs_interfaces/hardware/: hardware.py
mirs/src/mirs_interfaces/mirs_interfaces/msg/: CameraState.msg  MotorState.msg  RobotState.msg  SystemState.msg  TaskExecutorState.msg  TaskExtractorState.msg  TaskRecorderState.msg  Trajectory.msg
mirs/src/mirs_interfaces/msg/: Error.msg  RecordingState.msg  SystemState.msg  Task.msg  TaskExecutorState.msg  TaskExtractionStatus.msg  TaskExtractorState.msg  TaskRecorderState.msg  Theta.msg  VoiceState.msg
mirs/src/mirs_interfaces/srv/: ExecTask.srv  ExtractTask.srv
mirs/src/mirs_interfaces/topics/: topics.py
utils/: capture_images.py  cheth@raspberrypi.local  data_collector.py  get_pose.py  image_downloader.py
(+214 files in other folders)
