<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mirs_controller</name>
  <version>0.0.1</version>
  <description>MIRS Controller Package</description>
  <maintainer email="chethanputran222@gmail.com">Chethan Putran</maintainer>
  <license>
    MIT</license>



  <depend>rclpy</depend>
    <!-- <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend> -->
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>std_msgs</depend>
  <depend>mirs_system</depend>
  <depend>mirs_interfaces</depend>
  <depend>mirs_description</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>