<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mirs_robot_description</name>
  <version>0.0.1</version>
  <description>Mirs robot description package xml</description>
  <maintainer email="chethan_putran@gmail.com">chethan_putran</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_model_path="/home/chethan/Desktop/MajorProject/software/mirs/install/mirs_robot_description/share/"/> -->
  </export>
</package>
